fixed missing space in inline HTML response

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ function showExample() {
 
 <p>These web services are for demonstration or experimental use only.<br/>They are not (yet) implemented on production quality infrastructure and are subject to change without notice.</p>
 	
-<div style="background:#EEEEEE;padding:10px;">
+<div style="background:white;padding:10px;">
  	<h2>Function: getDosageText</h2>
 	<p>Returns an appropriate human readable dosage string generated from the given FHIR Dosage structure. Use to populate the .text structure within profiled resources like <a href="https://fhir.hl7.org.uk/STU3/StructureDefinition/CareConnect-MedicationRequest-1">CareConnect-MedicationRequest-1</a>.</p>
     
