--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ function showExample() {
 
 <h3><span style="color:red;">Alpha v1.0.5</span></h3>
 
-<p>These web services are for demonstration or experimental use only.<br/>They are not (yet) implemented on production quality infrastructure and are subject to change without notice.</p>
+<p>These web services are for demonstration or experimental use only.<br/>They are not (yet) implemented on production quality infrastructure and are subject to change without notice.<br/>Jump to the <a href="#relNotes">Release Notes</a>. Source code on <a href="https://github.com/RobertGoochUK/milk">GitHub</a>.</p>
 	
 <div style="background:white;padding:10px;">
  	<h2>Function: getDosageText</h2>
@@ -254,5 +254,13 @@ function showExample() {
 	<p>
 </div>
 
-	</body>
+<a name="relNotes"></a>
+<div style="background:#CCCCCC;padding:5px;font-size:smaller;">
+    <h2>Release Notes</h2>
+    <h3>Alpha v1.0.5</h3>
+    <p><span style="font-weight:bold;">Change History</span>: Function getDosageText now as a true web service.</p>
+    <p><span style="font-weight:bold;">Known Issues</span>: HTML Single Line output for multi-sequence instructions not working.</p>
+</div>
+
+</body>
 </html>
