--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@ function showExample() {
     
 <h1>Project MILK: Medicines Interoperability and Logic Toolkit</h1>
 
-<h3><span style="color:red;">Alpha v1.0.6</span></h3>
+<h3><span style="color:red;">Alpha v1.0.7</span></h3>
 
-<p>These web services are for demonstration or experimental use only.<br/>They are not (yet) implemented on production quality infrastructure and are subject to change without notice.<br/>Jump to the <a href="#relNotes">Release Notes</a>. Source code on <a href="https://github.com/RobertGoochUK/milk">GitHub</a>. Join the <a href="https://interopen.ryver.com/index.html#forums/1276343">INTEROPen discussion</a>.</p>
+<p>These web services are for demonstration or experimental use only and are subject to change without notice.<br/>Jump to the <a href="#relNotes">Release Notes</a>. Source code on <a href="https://github.com/RobertGoochUK/milk">GitHub</a>. Join the <a href="https://interopen.ryver.com/index.html#forums/1276343">INTEROPen discussion</a>.</p>
 
 <h2>Step 1: FHIR Source XML Data</h2>
 
@@ -230,9 +230,12 @@ function showExample() {
 <a name="relNotes"></a>
 <div style="background:#CCCCCC;padding:5px;font-size:smaller;">
     <h2>Release Notes</h2>
+    <h3>Alpha v1.0.7</h3>
+    <p><span style="font-weight:bold;">Change History</span>: Last two repeatable clauses now separated with 'and', e.g. "at 10:00, 12:00 and 14:00". HTML Single Line output for multi-sequence instructions now working. </p>
+    <p><span style="font-weight:bold;">Known Issues</span>: None identified</p>
     <h3>Alpha v1.0.6</h3>
-    <p><span style="font-weight:bold;">Change History</span>: TBC</p>
-    <p><span style="font-weight:bold;">Known Issues</span>: TBC</p>
+    <p><span style="font-weight:bold;">Change History</span>: Minor changes to logic</p>
+    <p><span style="font-weight:bold;">Known Issues</span>: HTML Single Line output for multi-sequence instructions not working.</p>
     <h3>Alpha v1.0.5</h3>
     <p><span style="font-weight:bold;">Change History</span>: Function getDosageText now as a true web service.</p>
     <p><span style="font-weight:bold;">Known Issues</span>: HTML Single Line output for multi-sequence instructions not working.</p>
