--- a/index.html
+++ b/index.html
@@ -302,13 +302,14 @@ function showExample() {
 
     <div class="row">
         <div class="col-sm">
-            <h2>Web Service: medicationResource (stubbed)</h2>
+            <h2>Web Service: medicationResource (currently limited to VTM and VMP concepts)</h2>
         </div>
     </div>
     <div class="row">
         <div class="col-sm">
 <p>Return a complete <a href="https://fhir.hl7.org.uk/STU3/StructureDefinition/CareConnect-Medication-1">CareConnect-Medication-1</a> FHIR resource as either XML or JSON.</p>
 <p>This web service could be used to reference a medication resource within another resource as per this example.</p>
+<p>Web service currently only returns the concept name. For a VMP, the form and ingredients will be supported in a future version. AMP concepts will be supported in a future version.</p>
         </div>
         <div class="col-sm">
             <small><b>Example FHIR XML</b></small></br>
@@ -319,15 +320,25 @@ function showExample() {
         <div class="cols-sm-6">
 			<div class="input-group">
                 <button class="primary" type="button" onclick="callGetMedicationResource('divOutputResource')">Execute</button>
-				<label for="concept_id">dm+d concept (id):</label>
+				<label for="exampleConceptsList">Examples:</label>
+                <select name="exampleConceptsList" id="exampleConceptsList" onChange='document.getElementById("concept_id").value = this.value;'>
+                    <option value="">(clear)</option>
+                    <option value="25673006">[VTM] Omeprazole</option>
+                    <option value="317297007">[VMP] Omeprazole 10mg gastro-resistant capsules</option>
+                    <option value="24351311000001108">[VMP] Omeprazole 10mg/5ml oral solution</option>
+                    <option value="64411000001103" disabled>[AMP] Losec 10mg gastro-resistant capsules (AstraZeneca UK Ltd)</option>
+                </select>
+                <label for="concept_id">Concept id:</label>
 				<input type="number" name="concept_id" id="concept_id" autocomplete="off"></input>
-				<label for="ot3">Output Type (ot):</label>
+				<br/>
+                <label for="ot3">Output Type (ot):</label>
 				<input type="radio" id="ot3-json" name="ot3" value="json" checked>json</input>
-				<input type="radio" id="ot3-xml" name="ot3" value="xml">xml</input>				
+				<input type="radio" id="ot3-xml" name="ot3" value="xml">xml</input>
+                <pre>{base_url}/fhir/stu3/medicationResource.php?id={concept_id}&ot={output_type}</pre>
 			</div>
 		</div>
 		<div class="cols-sm-6">
-			<pre>{base_url}/fhir/stu3/medicationResource.php?id={concept_id}&ot={output_type}</pre>
+			
 		</div>
 	</div>
     <div class="row">
@@ -340,6 +351,10 @@ function showExample() {
     <a name="relNotes"></a>
     <div class="row card">
         <h4>Release Notes</h4>
+        <div class="card">
+            <div class="section dark">Alpha v1.0.9</div>
+            <div class="section"><small><b>Change History</b>: Included support for 'boundsPeriod' timing instructions. Web service 'medicationResource' now functional for VTM and VMP concepts but only returns concept name. VMP form and ingredients will be supported in a future version.</small></div>
+        </div>
         <div class="card">
             <div class="section dark">Alpha v1.0.8</div>
             <div class="section"><small><b>Change History</b>: Visual improvements</small></div>
@@ -373,7 +388,7 @@ function showExample() {
 
 
 <footer class="sticky">
-MILK Experimental Web Services - <mark class="secondary">Alpha v1.0.8</mark> - Source code on <a href="https://github.com/RobertGoochUK/milk">GitHub</a> - Join the <a href="https://interopen.ryver.com/index.html#forums/1276343">INTEROPen discussion</a>
+MILK Experimental Web Services - <mark class="secondary">Alpha v1.0.9</mark> - Source code on <a href="https://github.com/RobertGoochUK/milk">GitHub</a> - Join the <a href="https://interopen.ryver.com/index.html#forums/1276343">INTEROPen discussion</a>
 </footer>
 
 </body>
